; ModuleID = '/home/carl/AnghaBench/nginx/src/os/win32/extr_ngx_process_cycle.c_ngx_close_handle.c'
source_filename = "/home/carl/AnghaBench/nginx/src/os/win32/extr_ngx_process_cycle.c_ngx_close_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@NGX_LOG_ALERT = common dso_local global i32 0, align 4
@ngx_cycle = common dso_local global %struct.TYPE_2__* null, align 8
@ngx_errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"CloseHandle(%p) failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ngx_close_handle(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @CloseHandle(i32 %3)
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load i32, i32* @NGX_LOG_ALERT, align 4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ngx_cycle, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @ngx_errno, align 4
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @ngx_log_error(i32 %7, i32 %10, i32 %11, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %14

14:                                               ; preds = %6, %1
  ret void
}

declare dso_local i64 @CloseHandle(i32) #1

declare dso_local i32 @ngx_log_error(i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
